--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,18 @@
-== README
+Kickin It
+=========
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Kickin It is a place for guys that want to kick it with other dudes and post low key events related to drinking. 
 
-Things you may want to cover:
+The target audience is males, ages 21-35, especially those new to NYC looking to meet new guy friends.
+> It's easy to find a date online but finding new guy friends can be a challenge
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Functionality:
+  1. User can create a profile with some basic characteristics (quiet or loud, intellectual or shit-talker, don't drink or get wasted)
+     
+      1a. Log in with Facebook Oauth   
+  2. User will post events with time and location, to be displayed on a map
+  3. A "feed" will show the most recent event posts with corresponding map
+  4. API - Google Maps or Foursquare (or both)
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+    
